First pass at writing conversions Markdown doc.